# 2016VisionCode

./: .gitignore  .vimrc  SN1589.conf  amd64_setup.sh  interfaces  set_freq_tx.sh  setup_environment.sh  zv.conf
C920NonL/: C920Cap  C920Cap.cpp  CMakeLists.txt
ZedPlainCap/: CMakeLists.txt  ZedCap.cpp  zedin.cpp  zedin.hpp
bindetection/: .gitignore  Args.cpp  Args.hpp  CMakeLists.txt  FlowLocalizer.cpp  Utilities.cpp  Utilities.hpp  aviout.cpp  aviout.hpp  c920camerain.cpp  c920camerain.hpp  camerain.cpp  camerain.hpp  classifierio.cpp  classifierio.hpp  convertzms.cpp  detectstate.cpp  detectstate.hpp  frameticker.hpp  ground_truth.txt  groundtruth.cpp  groundtruth.hpp  imagein.cpp  imagein.hpp  kalman.cpp  kalman.hpp  mediain.cpp  mediain.hpp  mediaout.cpp  mediaout.hpp  mergezms.cpp  model_info.txt  objdetect.cpp  objdetect.hpp  pngout.cpp  pngout.hpp  portable_binary_iarchive.hpp  portable_binary_oarchive.cpp  test.cpp  test_snapshots.pl  (+14 more)
bindetection/d12/: deploy.prototxt  mean.binaryproto  network.caffemodel  snapshot_iter_104080.caffemodel  snapshot_iter_104080.solverstate  snapshot_iter_110585.caffemodel  snapshot_iter_110585.solverstate  snapshot_iter_11590.caffemodel  snapshot_iter_117090.caffemodel  snapshot_iter_123595.caffemodel  snapshot_iter_123595.solverstate  snapshot_iter_13010.caffemodel  snapshot_iter_13010.solverstate  snapshot_iter_130100.caffemodel  snapshot_iter_130100.solverstate  snapshot_iter_13908.caffemodel  snapshot_iter_16226.caffemodel  snapshot_iter_18544.caffemodel  snapshot_iter_19515.caffemodel  snapshot_iter_19515.solverstate  snapshot_iter_20862.caffemodel  snapshot_iter_2318.caffemodel  snapshot_iter_23180.caffemodel  snapshot_iter_25498.caffemodel  snapshot_iter_26020.caffemodel  snapshot_iter_26020.solverstate  snapshot_iter_27816.caffemodel  snapshot_iter_30134.caffemodel  snapshot_iter_32452.caffemodel  snapshot_iter_32525.caffemodel  snapshot_iter_32525.solverstate  snapshot_iter_34770.caffemodel  snapshot_iter_37088.caffemodel  snapshot_iter_39030.caffemodel  snapshot_iter_39030.solverstate  snapshot_iter_39406.caffemodel  snapshot_iter_41724.caffemodel  snapshot_iter_44042.caffemodel  snapshot_iter_45535.caffemodel  snapshot_iter_45535.solverstate  (+36 more)
bindetection/d24/: deploy.prototxt  mean.binaryproto  network.caffemodel  snapshot_iter_104080.caffemodel  snapshot_iter_110585.caffemodel  snapshot_iter_117090.caffemodel  snapshot_iter_117090.solverstate  snapshot_iter_123595.caffemodel  snapshot_iter_13010.caffemodel  snapshot_iter_130100.caffemodel  snapshot_iter_136605.caffemodel  snapshot_iter_143110.caffemodel  snapshot_iter_149615.caffemodel  snapshot_iter_156120.caffemodel  snapshot_iter_162625.caffemodel  snapshot_iter_169130.caffemodel  snapshot_iter_175635.caffemodel  snapshot_iter_182140.caffemodel  snapshot_iter_188645.caffemodel  snapshot_iter_19515.caffemodel  snapshot_iter_195150.caffemodel  snapshot_iter_201655.caffemodel  snapshot_iter_207744.caffemodel  snapshot_iter_208160.caffemodel  snapshot_iter_214665.caffemodel  snapshot_iter_221170.caffemodel  snapshot_iter_227675.caffemodel  snapshot_iter_234180.caffemodel  snapshot_iter_240685.caffemodel  snapshot_iter_247190.caffemodel  snapshot_iter_253695.caffemodel  snapshot_iter_26020.caffemodel  snapshot_iter_260200.caffemodel  snapshot_iter_286220.caffemodel  snapshot_iter_299230.caffemodel  snapshot_iter_32525.caffemodel  snapshot_iter_325250.caffemodel  snapshot_iter_325250.solverstate  snapshot_iter_39030.caffemodel  snapshot_iter_45535.caffemodel  (+13 more)
caffe_classifier/: .gitignore  CMakeLists.txt  CaffeBatchPrediction.cpp  CaffeBatchPrediction.hpp  detect.cpp  detect.hpp  detectcheck.cpp  fast_nms.cpp  fast_nms.hpp  main.cpp  scalefactor.cpp  scalefactor.hpp
caffe_classifier/bin_model/: deploy.prototxt  labels.txt  mean.binaryproto  solver.prototxt  train_val.prototxt
fovis/: CMakeLists.txt  FovisLocalizer.cpp  FovisLocalizer.hpp  fovis_testing.cpp  fovis_zed_test  x  zedin.cpp  zedin.hpp
goal-detection/: CMakeLists.txt  GoalDetector.cpp  GoalDetector.hpp  goal_detect  goal_detect.cpp  portable_binary_oarchive.hpp
grab_display/: .gitignore  CMakeLists.txt  chroma_key.cpp  chroma_key.hpp  createtrainsamples.pl  display.cpp  grab_chroma.cpp  imageShift.cpp  imageShift.hpp  image_warp.cpp  image_warp.hpp  rotate_from_imageclipper.cpp  shift_from_imageclipper.cpp  zca.cpp  zca.hpp  zcaWeights12_12345_100000.xml  zcacalc.cpp  zcarun.cpp
kalman/: CMakeLists.txt  PositionKF.cpp  PositionKF.hpp  kalman_testing.cpp
threading-test/: CMakeLists.txt  threading.cpp  zedin.cpp  zedin.hpp
zebravision/: .gitignore  Args.cpp  Args.hpp  C920Camera.cpp  CMakeLists.txt  CaffeBatchPrediction.cpp  CaffeBatchPrediction.hpp  CaffeClassifier.cpp  CaffeClassifier.hpp  Classifier.cpp  Classifier.hpp  FlowLocalizer.cpp  GIEClassifier.cpp  GIEClassifier.hpp  GoalDetector.cpp  GoalDetector.hpp  Utilities.cpp  Utilities.hpp  ZvSettings.cpp  ZvSettings.hpp  asyncin.cpp  c920camerain.cpp  c920camerain.hpp  camerain.cpp  camerain.hpp  cascadeclassifierio.cpp  classifierio.cpp  classifierio.hpp  colormap.cpp  convertzms.cpp  cvMatSerialize.hpp  depth_threshold.cu  depthtest.cpp  detect.cpp  detect.hpp  detectstate.cpp  detectstate.hpp  groundtruth.cpp  hungarian.cpp  imagein.cpp  (+40 more)
zebravision/c12/: deploy.prototxt  mean.binaryproto  snapshot_iter_54880.caffemodel  snapshot_iter_68600.caffemodel  solver.prototxt  train_val.prototxt
zebravision/c12_3/: deploy.prototxt  snapshot_iter_113701.caffemodel  snapshot_iter_129944.caffemodel  snapshot_iter_146187.caffemodel  snapshot_iter_16243.caffemodel  snapshot_iter_162430.caffemodel  snapshot_iter_178673.caffemodel  snapshot_iter_194916.caffemodel  snapshot_iter_211159.caffemodel  snapshot_iter_227402.caffemodel  snapshot_iter_243645.caffemodel  snapshot_iter_259888.caffemodel  snapshot_iter_276131.caffemodel  snapshot_iter_292374.caffemodel  snapshot_iter_308617.caffemodel  snapshot_iter_32486.caffemodel  snapshot_iter_324860.caffemodel  snapshot_iter_341103.caffemodel  snapshot_iter_357346.caffemodel  snapshot_iter_373589.caffemodel  (+35 more)
(+1867 files in other folders)
