cmake_minimum_required(VERSION 2.8)
set(CMAKE_LEGACY_CYGWIN_WIN32 0)
project(ZedCap)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_FLAGS "-std=c++11")
find_package(OpenCV REQUIRED)
find_package(Boost COMPONENTS filesystem system serialization iostreams REQUIRED)
find_package(ZED REQUIRED)
find_package(CUDA REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} ${ZED_INCLUDE_DIRS} ${CUDA_INCLUDE_DIRS} ../bindetection)
link_directories(${ZED_INCLUDE_DIRS})
link_directories(${CUDA_INCLUDE_DIRS})
set (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -g -Wall -Ofast")
 
add_definitions(-DZED_SUPPORT)

add_executable( ZedCap ZedCap.cpp ../bindetection/mediain.cpp ../bindetection/zedin.cpp)
target_link_libraries( ZedCap ${OpenCV_LIBS} ${ZED_LIBRARIES} ${CUDA_LIBRARIES} ${Boost_LIBRARIES})
