cmake_minimum_required(VERSION 2.8)
set(CMAKE_LEGACY_CYGWIN_WIN32 0) # Remove when CMake >= 2.8.4 is required
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Ofast -flto")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -std=c++11 -Ofast -flto")
project( display )
find_package( OpenCV REQUIRED )
add_executable( display display.cpp)
target_link_libraries( display ${OpenCV_LIBS} )
add_executable( ColorSharpen ColorSharpen.cpp)
target_link_libraries( ColorSharpen ${OpenCV_LIBS} )
add_executable( imageShift imageShift.cpp )
target_link_libraries( imageShift ${OpenCV_LIBS} )
